--- a/style.scss
+++ b/style.scss
@@ -561,6 +561,7 @@ a{
             outline: none;
             @media screen and (max-width:375px) {
                 width: 150px;
+                height: 50px;
             }
         }
     }
