--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
   margin: 0;
   padding: 0;
   direction: rtl;
+  scroll-behavior: smooth;
 }
 
 body {
-  scroll-behavior: smooth;
-  background-image: linear-gradient(to top left, #5b5b5b, #202020);
+  background-color: #202020;
   color: #fff;
 }
 
@@ -22,11 +22,52 @@ button {
 
 a {
   color: #e5c67d;
+  text-decoration: none;
+}
+
+.features .all, .header .header-nav nav .hamburger, .header .header-nav nav img, .header .header-nav nav, .scroll {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.features .all, .header .header-nav nav {
+  margin: auto;
+  width: 80%;
+}
+
+.over-view .over-view-imge .shap-img, .over-view .over-view-imge .shap {
+  animation: mover 1s infinite alternate;
+}
+@keyframes mover {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+
+.scroll {
+  position: absolute;
+  bottom: 0;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  background-color: #e5c67d;
+  border-radius: 5px;
+  position: fixed;
+  display: none;
+  border: none;
+  transition: 1s;
+}
+.scroll ion-icon {
+  color: #171516;
+  font-size: 25px;
 }
 
 .header {
   width: 100%;
-  height: 20vh;
 }
 .header .header-nav {
   width: 100%;
@@ -36,21 +77,22 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  box-shadow: #e5c67d 0px 4px 0px 0px;
   box-shadow: 0.5px 0.5px 4px #202020;
   z-index: 9999;
 }
 .header .header-nav nav {
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   line-height: 80px;
+}
+@media screen and (max-width: 767px) {
+  .header .header-nav nav {
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+  }
 }
 .header .header-nav nav img {
   display: block;
-  width: 70px;
+  width: 60px;
   height: auto;
   line-height: 80px;
 }
@@ -62,18 +104,21 @@ a {
     display: none;
   }
 }
+@media screen and (min-width: 768px) {
+  .header .header-nav nav ul {
+    display: block;
+  }
+}
 .header .header-nav nav ul li {
   display: inline-block;
-  padding: 0 20px;
+  margin: 0 15px;
 }
 .header .header-nav nav ul li a {
-  text-decoration: none;
   color: #e5c67d;
-  font-size: 15px;
-  font-weight: lighter;
+  font-size: 16px;
   background: transparent;
   position: relative;
-  transition: 0.5s ease;
+  transition: 0.2s ease;
   padding: 5px;
 }
 .header .header-nav nav ul li a::before {
@@ -109,6 +154,9 @@ a {
   transition: 0.4s ease;
   z-index: -1;
 }
+.header .header-nav nav ul li .active {
+  color: #fff;
+}
 .header .header-nav nav button {
   color: #e5c67d;
   display: inline-block;
@@ -123,10 +171,9 @@ a {
   font-size: 15px;
   border-radius: 6px;
   color: #e5c67d;
-  background-color: #202020;
-  box-shadow: 1px 1px 5px #e5c67d;
+  background-color: transparent;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 999px) {
   .header .header-nav nav button {
     display: none;
   }
@@ -154,26 +201,48 @@ a {
   background: #e5c67d;
   transition: background 0s;
 }
+.header .header-nav nav .hamburger {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #e5c67d;
+  text-align: center;
+  align-items: center;
+  display: none;
+}
+.header .header-nav nav .hamburger ion-icon {
+  color: #171516;
+  font-size: 40px;
+}
+@media screen and (max-width: 767px) {
+  .header .header-nav nav .hamburger {
+    display: block;
+  }
+}
 
 .over-view {
   width: 80%;
-  height: auto;
+  height: 100vh;
   margin: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-items: center;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .over-view {
+    text-align: center;
+    margin-top: 100px;
     flex-direction: column;
+    height: auto;
   }
 }
 .over-view .over-view-text {
-  margin-top: 60px;
+  align-items: center;
 }
 @media screen and (max-width: 767px) {
   .over-view .over-view-text {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
   }
 }
 .over-view button {
@@ -189,9 +258,9 @@ a {
   transition: all 1s;
   font-size: 16px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .over-view button {
-    margin-top: 10px;
+    margin: 20px;
   }
 }
 .over-view .play {
@@ -200,13 +269,16 @@ a {
   color: #fff;
 }
 .over-view .play:hover {
-  background-color: #171516;
-  color: #fff;
+  background-color: #fff;
+  color: #5b5b5b;
+}
+.over-view .app {
+  border: 2px solid #5b5b5b;
 }
 .over-view .app:hover {
-  background-color: transparent;
-  color: #171516;
-  border: 1px solid #171516;
+  border: none;
+  background-color: #fff;
+  color: #5b5b5b;
 }
 .over-view .over-view-imge {
   position: relative;
@@ -217,16 +289,15 @@ a {
   }
 }
 .over-view .over-view-imge .shap {
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   background-color: #171516;
-  margin-top: 50px;
   border-radius: 30% 70% 57% 43%/41% 60% 40% 59%;
 }
 .over-view .over-view-imge .shap-img {
   position: absolute;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
   background-image: url(images/slider-one/mockup01-removebg-preview.png);
   background-position: center;
   background-size: cover;
@@ -234,18 +305,15 @@ a {
 }
 
 .features {
-  margin-top: 50px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  text-align: center;
 }
 .features h2 {
-  margin-bottom: 40px;
+  margin-bottom: 100px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .features h2 {
     font-size: 20px;
+    margin-top: 200px;
   }
 }
 .features h2 span {
@@ -253,13 +321,6 @@ a {
   width: 50px;
   height: 5px;
   background-color: #fff;
-}
-.features .all {
-  width: 80%;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 @media screen and (max-width: 767px) {
   .features .all {
@@ -273,15 +334,18 @@ a {
   padding: 50px 10px;
   text-align: center;
   border-radius: 35px;
+  transition: 0.5s;
 }
 @media screen and (max-width: 1300px) {
   .features .all div {
     margin: 10px;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .features .all div {
-    margin: 10px;
+    margin: 5px;
+    font-size: 12px;
+    height: 150px;
   }
 }
 .features .all div:hover {
@@ -289,13 +353,13 @@ a {
 }
 .features .all div ion-icon {
   font-size: 35px;
-  color: #171516;
+  color: #fff;
 }
 .features .all div span {
   display: block;
   width: 50px;
   height: 4px;
-  background-color: #171516;
+  background-color: #fff;
   margin-right: 65px;
   margin-top: 20px;
 }
@@ -317,11 +381,10 @@ a {
 .prices1 {
   width: 100%;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 100px;
   height: auto;
 }
 .prices1 h1 {
-  padding-right: 130px;
   padding-top: 30px;
   text-align: center;
 }
@@ -355,10 +418,13 @@ a {
   height: 370px;
   padding: 50px 20px;
   text-align: center;
-  transition: 0.5s ease-in-out;
   border-radius: 6px;
   color: #fff;
-  background-color: #202020;
+  background-color: #171516;
+  transition: 0.5s;
+}
+.prices1 .prices div:hover {
+  transform: rotate(5deg);
 }
 @media screen and (max-width: 767px) {
   .prices1 .prices div {
@@ -366,9 +432,6 @@ a {
     margin: auto;
     margin-bottom: 40px;
   }
-}
-.prices1 .prices div:hover {
-  transform: scale(1.1);
 }
 .prices1 .prices div .icons {
   font-size: 40px;
@@ -396,31 +459,33 @@ a {
   box-shadow: 1px 1px 3px #171516;
 }
 .prices1 .prices .center {
-  transform: scaleY(1.1);
+  border: 2px solid #5b5b5b;
 }
 
 .download-app {
   width: 100%;
   height: auto;
   background-color: #171516;
-  margin-top: 60px;
+  margin-top: 100px;
   color: #fff;
   display: flex;
-  padding: 10px 130px;
   align-items: center;
+  justify-content: space-between;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .download-app {
     text-align: center;
     padding: 10px 20px;
   }
 }
 .download-app .download-app-text {
-  width: 50%;
+  width: 60%;
+  padding: 0 140px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   .download-app .download-app-text {
     width: 100%;
+    padding: 0;
   }
 }
 .download-app .download-app-text p {
@@ -448,11 +513,10 @@ a {
 }
 .download-app .download-app-imag {
   width: 500px;
-  height: 300px;
+  height: 400px;
   background-image: url(images/slider-one/download.png);
   background-size: cover;
   background-position: center;
-  border-left: 1px solid #e5c67d;
 }
 @media screen and (max-width: 767px) {
   .download-app .download-app-imag {
@@ -464,6 +528,7 @@ a {
   width: 80%;
   margin: auto;
   margin-top: 80px;
+  margin-bottom: 150px;
 }
 .counter .counter-text {
   text-align: center;
@@ -477,6 +542,7 @@ a {
 }
 .counter .counter-count ion-icon {
   font-size: 45px;
+  color: #e5c67d;
 }
 @media screen and (max-width: 767px) {
   .counter .counter-count ion-icon {
@@ -494,36 +560,40 @@ a {
 .counter .counter-count p {
   font-size: 12px;
   font-weight: lighter;
-  color: #fff;
+  color: #e5c67d;
 }
 
 .swiper {
   width: 90%;
-  height: auto;
+  height: 100%;
 }
 .swiper .swiper-button-prev,
 .swiper .swiper-button-next {
-  color: #a78c50;
+  color: transparent;
 }
 .swiper .swiper-slide {
   text-align: center;
   font-size: 18px;
-  background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.swiper .swiper-slide img {
+  width: 99%;
+  height: 500px;
 }
 .swiper h2 {
   margin-top: 30px;
   margin-bottom: 30px;
   text-align: center;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .contact-us {
   width: 80%;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 200px;
+  text-align: center;
 }
 @media screen and (max-width: 375px) {
   .contact-us {
@@ -534,6 +604,7 @@ a {
   display: flex;
   justify-content: space-around;
   padding: 20px;
+  text-align: center;
 }
 @media screen and (max-width: 1300px) {
   .contact-us .contact {
@@ -543,28 +614,31 @@ a {
 }
 .contact-us .contact input {
   display: inline-block;
-  width: 400px;
+  width: 600px;
   height: 50px;
   margin-bottom: 25px;
   border-radius: 6px;
   outline: none;
-  border: 2px solid #e5c67d;
+  border: 1px solid #e5c67d;
   padding: 10px;
   font-size: 12px;
   color: #171516;
   font-family: myfont;
+  background-color: #202020;
 }
 @media screen and (max-width: 767px) {
   .contact-us .contact input {
-    width: 200px;
+    width: 250px;
   }
 }
 @media screen and (max-width: 375px) {
   .contact-us .contact input {
-    width: 200px;
+    width: 250px;
   }
 }
 .contact-us .contact textarea {
+  width: 400px;
+  height: 200px;
   border: 2px solid #e5c67d;
   font-family: myfont;
   padding: 10px;
@@ -572,11 +646,18 @@ a {
   font-size: 15px;
   outline: none;
   overflow: hidden;
+  background-color: #202020;
+}
+@media screen and (max-width: 768px) {
+  .contact-us .contact textarea {
+    width: 600px;
+    height: 150px;
+  }
 }
 @media screen and (max-width: 767px) {
   .contact-us .contact textarea {
-    display: none;
-    width: 200px;
+    width: 250px;
+    height: 150px;
   }
 }
 
@@ -587,6 +668,7 @@ a {
 @media screen and (max-width: 375px) {
   .footer {
     margin-top: 30px;
+    text-align: center;
   }
 }
 .footer .flex0 {
@@ -608,11 +690,20 @@ a {
     display: block;
   }
 }
+@media screen and (max-width: 768px) {
+  .footer .flex0 {
+    width: 100%;
+    padding: 10px;
+  }
+}
 @media screen and (max-width: 767px) {
   .footer .two,
   .footer .three {
     display: none;
   }
+}
+.footer .two p a {
+  color: #fff;
 }
 .footer button {
   width: 140px;
